Add description and social meta tags

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="theme-color" content="#000000">
+    <meta name="theme-color" content="#193163">
     <!--
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
@@ -19,7 +19,17 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+
     <title>ShowFace</title>
+    <!-- Search Engine -->
+    <meta name="description" content="Find the best time to meet with ShowFace!">
+    <meta name="image" content="%PUBLIC_URL%/img/logos/sf-circle.png">
+    <!-- Open Graph general -->
+    <meta name="og:title" content="ShowFace">
+    <meta name="og:description" content="Find the best time to meet with ShowFace!">
+    <meta name="og:image" content="%PUBLIC_URL%/img/logos/sf-circle.png">
+    <meta name="og:site_name" content="ShowFace">
+    <meta name="og:type" content="website">
   </head>
   <body>
     <noscript>
